gix-tix/src/snapshots/gix_tix__animation__tests__filesystem_reword_frames.snap
---
source: gix-tix/src/animation.rs
expression: "distinct_frames(Emphasis::new(source,\ntarget).expect(\"a reword is emphasized\"))"
---
--- frame 0 ---
333 new title
style: bbbbbbbbbbbbbbbbbbbbbbbb
222 unchanged



--- frame 1 ---
333 new title
222 unchanged
